# matlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  matlib.cmake  matlib_header.cmake
include/: matlib.h  matlib_cpu.h  matlib_lmul.h  matlib_rvv.h  matlib_rvvu.h  matlib_rvvu.py
include/float32/: matlib.h  matlib_cpu.h  matlib_lmul.h  matlib_rva.h  matlib_rvv.h  matlib_rvvf.py  matlib_rvvu.h  matlib_rvvu.py
include/float64/: matlib.h  matlib_cpu.h  matlib_lmul.h  matlib_rva.h  matlib_rvv.h  matlib_rvvf.py  matlib_rvvu.py
include/int32/: matlib.h  matlib_cpu.h  matlib_lmul.h  matlib_rva.h  matlib_rvv.h  matlib_rvvf.py  matlib_rvvu.py
src/: matlib.cpp
test/: test_matlib_rvv.cpp  test_matperf_rvv.cpp  test_rvv.h
